Template author completo

--- a/src/styles/sass/box-listagem.scss
+++ b/src/styles/sass/box-listagem.scss
@@ -80,17 +80,26 @@
       min-height: 50px;
     }
 
-    .checked {
-      font-weight: bold;
+    .bottom-edit {
+      flex-grow: 1;
+
+      p {
+        display: inline-block;
+      }
+
+      .msg {
+        color: $error;
+        font-size: 0.8em;
+        font-weight: bold;
+      }
     }
 
     .options-list {
       display: none;
       align-items: center;
-      flex-grow: 1;
 
       &.show {
-        display: flex;
+        display: inline-flex;
       }
 
       .edit,
