--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -169,14 +169,19 @@ main {
       padding: 5px 0;
       width: 100%;
       min-height: 50px; }
-    .box-listagem .box-list .checked {
-      font-weight: bold; }
+    .box-listagem .box-list .bottom-edit {
+      flex-grow: 1; }
+      .box-listagem .box-list .bottom-edit p {
+        display: inline-block; }
+      .box-listagem .box-list .bottom-edit .msg {
+        color: #fc0000;
+        font-size: 0.8em;
+        font-weight: bold; }
     .box-listagem .box-list .options-list {
       display: none;
-      align-items: center;
-      flex-grow: 1; }
+      align-items: center; }
       .box-listagem .box-list .options-list.show {
-        display: flex; }
+        display: inline-flex; }
       .box-listagem .box-list .options-list .edit,
       .box-listagem .box-list .options-list .delete {
         display: flex;
