--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -28,6 +28,7 @@
 
 // botoes formulario
 @import "components/buttons/buttonConfirm";
+@import "components/buttons/buttonOpen";
 
 // pagina de manutenção
 @import "templates/any-pages/page-working";
