--- a/src/styles/components/tables/_table-list.scss
+++ b/src/styles/components/tables/_table-list.scss
@@ -15,7 +15,7 @@
 
     thead {
       th {
-        padding: 15px 10px;
+        padding: 10px;
         color: #fff;
         text-transform: uppercase;
         letter-spacing: 1px;
@@ -36,7 +36,7 @@
     }
 
     td {
-      padding: 8px 10px;
+      padding: 5px 10px;
       border: 1px solid rgba(0, 0, 0, 0.2);
       text-align: center;
       cursor: pointer;
