formulario de cadastro e edição de livro em andamento

--- a/src/styles/components/buttons/_buttonConfirm.scss
+++ b/src/styles/components/buttons/_buttonConfirm.scss
@@ -15,4 +15,9 @@
   &:hover {
     background-color: lighten($primary-color, 20%);
   }
+
+  &[disabled] {
+    opacity: 0.2;
+    cursor: not-allowed;
+  }
 }
