--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -28,6 +28,8 @@
 
 // inputs formulario
 @import "components/inputs/inputText";
+@import "components/textarea/textarea";
+@import "components/selects/select";
 
 // botoes formulario
 @import "components/buttons/buttonConfirm";
