--- a/src/styles/components/textarea/_textarea.scss
+++ b/src/styles/components/textarea/_textarea.scss
@@ -1,14 +1,15 @@
-.input-title {
+.textarea-title {
   display: block;
   margin-bottom: 10px;
 }
 
-input {
+textarea {
   width: 100%;
   outline: 0;
   border: 1px solid #000;
   padding: 5px 10px;
   line-height: 1.5em;
+  resize: none;
 }
 
 .msg {
