--- a/src/styles/templates/box-list/_box-lists.scss
+++ b/src/styles/templates/box-list/_box-lists.scss
@@ -53,33 +53,37 @@
 
 	.search-filter {
 		display: flex;
+		align-items: center;
+		justify-content: flex-end;
 		position: absolute;
 		top: 0;
 		right: 0;
-		padding: 4px;
-		width: 30%;
+		padding: 3px 10px;
+		width: 50%;
+		max-width: 52px;
+		transition: all 0.3s linear;
+		
+		&.open {
+			max-width: 250px;
+		}
 
 		input {
-			border: 0;
-			border-bottom: 1px solid #fff;
-			background-color: transparent;
-      color: #fff;
-      
-      &::placeholder {
-        color: #fff;
-      }
-      &::-webkit-input-placeholder {
-        color: #fff;
-      }
-      &::-moz-placeholder {
-        color: #fff;
-      }
+			width: 100%;
+			outline: 0;
+			padding: 5px;
+			margin: 0;
+			line-height: 1.5em;
+			border-radius: 4px;
 		}
 
 		i {
-			color: #fff;
-			font-size: 1.5em;
-			margin-left: -1.5em;
+			color: $primary-color;
+			font-size: 0.8em;
+			padding: 6px;
+			cursor: pointer;
+			margin-left: -28px;
+			background-color: #fff;
+			z-index: 1;
 		}
 	}
 }
