--- a/src/styles/components/buttons/_buttonOpen.scss
+++ b/src/styles/components/buttons/_buttonOpen.scss
@@ -1,32 +1,30 @@
 .btn-open {
-  position: absolute;
-  top: -70px;
-  left: 50%;
-  transform: translateX(-50%);
-  z-index: 10;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 0;
-  width: 50px;
-  height: 50px;
-  padding: 10px;
-  background-color: $primary-color;
-  border-radius: 50%;
-  transition: all 0.2s linear;
-  cursor: pointer;
+	position: absolute;
+	bottom: 10px;
+	right: 5%;
+	z-index: 10;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-size: 0;
+	width: 50px;
+	height: 50px;
+	padding: 10px;
+	background-color: $primary-color;
+	border-radius: 50%;
+	transition: all 0.2s linear;
+	cursor: pointer;
 
-  &:hover {
-    background-color: lighten($primary-color, 20%);
-  }
+	&:hover {
+		background-color: lighten($primary-color, 20%);
+	}
 
-  i {
-    font-size: 20px;
-    color: #fff;
-  }
+	i {
+		font-size: 20px;
+		color: #fff;
+	}
 
-  &.open {
-    background-color: lighten($primary-color, 20%);
-    transform: rotate(135deg) translate(50%, 50%);
-  }
+	&.open {
+		display: none;
+	}
 }
