--- a/src/styles/components/textarea/_textarea.scss
+++ b/src/styles/components/textarea/_textarea.scss
@@ -1,13 +1,19 @@
+label[for="summary"] {
+  display: block;
+}
+
 .textarea-title {
   display: block;
-  margin-bottom: 10px;
+  margin-bottom: 2px;
 }
 
 textarea {
   width: 100%;
   outline: 0;
-  border: 1px solid #000;
+  border: 1px solid #ccc;
+  border-radius: 4px;
   padding: 5px 10px;
+  margin-bottom: 10px;
   line-height: 1.5em;
   resize: none;
 }
