--- a/src/styles/templates/box-cadastro/_box-form.scss
+++ b/src/styles/templates/box-cadastro/_box-form.scss
@@ -1,61 +1,64 @@
 .box-cadastro {
-  position: absolute;
-  top: 100%;
-  left: 0;
-  width: 100%;
-  padding: 0 10px;
-}
+	position: absolute;
+	width: 100%;
+	max-width: 800px;
+	margin: 0 auto;
+	left: 50%;
+	transform: translateX(-50%);
+	bottom: -100%;
+	border-radius: 5px;
+	transition: all 0.3s ease-in-out;
+	z-index: 10;
+	padding: 10px;
 
-.box-cadastro-container {
-  position: relative;
-  width: 100%;
-  max-width: 800px;
-  margin: 0 auto;
-  right: 0;
-  bottom: 0;
-  border-radius: 5px;
-  border: 1px solid #000;
-  transition: all 0.3s ease-in-out;
-  z-index: 1;
+	&.open {
+		bottom: 0;
+  }
+  
+  .btn-close {
+    position: absolute;
+    padding: 10px;
+    top: 8px;
+    right: 10px;
+    font-size: 1.5em;
+    color: $primary-color;
+    cursor: pointer;
 
-  &.open {
-    bottom: 200px;
-
-    &.book {
-      bottom: 350px;
+    &:hover {
+      color: lighten($primary-color, 20%);
     }
   }
 
-  h3 {
-    font-weight: bold;
-    font-size: 1.1em;
-    padding: 10px;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-    background-color: darken($secondary-color, 10%);
-  }
+	h3 {
+		font-weight: bold;
+		font-size: 1.1em;
+		padding: 10px;
+		border-top-left-radius: 5px;
+		border-top-right-radius: 5px;
+		background-color: darken($secondary-color, 10%);
+	}
 
-  .box-form {
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
-    padding: 10px;
-    background-color: #fff;
-  }
+	.box-form {
+		border-bottom-left-radius: 5px;
+		border-bottom-right-radius: 5px;
+		padding: 10px;
+		background-color: #fff;
+	}
 }
 
 .mask {
-  opacity: 0;
-  z-index: -1;
-  position: absolute;
-  bottom: 100%;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, 0.8);
-  transition: all 0.2s linear;
+	opacity: 0;
+	z-index: -1;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100vw;
+	height: 100vh;
+	background-color: rgba(0, 0, 0, 0.8);
+	transition: all 0.2s linear;
 
-  &.show {
-    opacity: 1;
-    z-index: 0;
-  }
+	&.show {
+		opacity: 1;
+		z-index: 2;
+	}
 }
